examples/test/testpolicy5108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5108
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key24: value8
      key39: value22
      key21: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value40
      podSelector:
        matchLabels:
          key45: value4
          key7: value41
          key33: value35
